@@ -631,6 +631,7 @@ ot_check_test (LeastSquaresExpansion_std IGNOREOUT)
 ot_check_test (IntegrationExpansion_std IGNOREOUT)
 ot_check_test (KrigingAlgorithm_std)
 ot_check_test (KrigingAlgorithm_funcmodel IGNOREOUT)
+ot_check_test (KrigingAlgorithm_nuggetFactor IGNOREOUT)
 ot_check_test (KrigingRandomVector_std)
 ot_check_test (MetaModelValidation_std)
 ot_check_test (GeneralLinearModelAlgorithm_std IGNOREOUT)
