@@ -742,6 +742,7 @@ ot_pyinstallcheck_test (LeastSquaresExpansion_std IGNOREOUT)
 ot_pyinstallcheck_test (IntegrationExpansion_std IGNOREOUT)
 ot_pyinstallcheck_test (KrigingAlgorithm_std)
 ot_pyinstallcheck_test (KrigingAlgorithm_funcmodel IGNOREOUT)
+ot_pyinstallcheck_test (KrigingAlgorithm_nuggetFactor IGNOREOUT)
 ot_pyinstallcheck_test (KrigingRandomVector_std)
 ot_pyinstallcheck_test (MetaModelAlgorithm_std)
 ot_pyinstallcheck_test (MetaModelValidation_std)
